# kube-perftest

./: README.md  index.yaml  kube-perftest-0.1.0-dev.0.feat-jobset.192.tgz  kube-perftest-0.1.0-dev.0.feat-scheduling.189.tgz  kube-perftest-0.1.0-dev.0.feat-scheduling.190.tgz  kube-perftest-0.1.0-dev.0.main.189.tgz  kube-perftest-0.1.0-dev.0.main.190.tgz  kube-perftest-0.1.0-dev.0.main.191.tgz  kube-perftest-0.1.0-dev.0.main.193.tgz  kube-perftest-0.1.0.tgz  kube-perftest-0.1.1.tgz  kube-perftest-0.1.2-dev.0.main.1.tgz  kube-perftest-operator-0.1.0-dev.0.feat-jobset.188.tgz  kube-perftest-operator-0.1.0-dev.0.feat-jobset.189.tgz  kube-perftest-operator-0.1.0-dev.0.feat-jobset.190.tgz  kube-perftest-operator-0.1.0-dev.0.feat-jobset.191.tgz  kube-perftest-operator-0.1.0-dev.0.main.187.tgz
.github/workflows/: publish-benchmark-images.yaml  publish-operator.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: clusterrole.yaml  deployment.yaml
images/iperf/: Dockerfile
images/perftest/: Dockerfile
python/: Dockerfile  requirements.txt  setup.cfg
python/perftest/: config.py  operator.py  template.py  utils.py
python/perftest/models/v1alpha1/: __init__.py  base.py  fio.py  iperf.py  openfoam.py  pingpong.py  pytorch.py  rdma.py  set.py
python/perftest/reconcilers/: __init__.py  benchmark.py  set.py
python/perftest/scheduling/: __init__.py  base.py  priorityclass.py  serial.py
python/perftest/templates/: _macros.j2  iperf.yaml.j2  rdmabandwidth.yaml.j2  rdmalatency.yaml.j2
