[metadata]
name = kube-perftest
version = 0.1.0
description = Kubernetes operator for running performance tests.
author = Matt Pryor
author_email = matt.pryor@nscale.com
url = https://github.com/nscaledev/kube-perftest


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    easykube-runtime
    jinja2
    kube-custom-resource
    pydantic
    pyyaml

[options.entry_points]
console_scripts =
    perftest-operator = perftest.operator:main
kube-perftest.scheduling-strategy =
    priorityclass = perftest.scheduling.priorityclass:PriorityClassStrategy
